# riff

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
ext/: CMakeLists.txt
src/: app.cpp  app.hpp  backend.cpp  backend.hpp  build_version.hpp.in  config.cpp  config.hpp  frontend.cpp  frontend.hpp  imcpp.cpp  imcpp.hpp  ini.cpp  ini.hpp  main.cpp  player.cpp  player.hpp  playlist.cpp  playlist.hpp  repeat.hpp  signal.hpp  state.hpp  track.hpp  track_list.cpp  track_list.hpp  tracklist.cpp  tracklist.hpp  util.hpp
src/core/: config.cpp  config.hpp  ini.cpp  ini.hpp  log.hpp  signal.hpp  time.hpp
src/embedded/: kenny_icon.ttf.cpp  rounded_elegance.ttf.cpp
src/input/: action.hpp  controller.cpp  controller.hpp  mapping.cpp  mapping.hpp  modifier.hpp
src/types/: event.hpp  playlist.cpp  polarity.hpp  track.hpp
src/widgets/: app.cpp  app.hpp  imcpp.cpp  imcpp.hpp  player.cpp  player.hpp  tracklist.cpp  tracklist.hpp
